<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/text_padding">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/git_login_success"
        android:id="@+id/imageView" />

    <TextView
        style="@style/myHeaderTwo"
        android:text="@string/great_you_logged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/text_padding"
        android:id="@+id/textView4" />

    <TextView
        style="@style/myUsualText"
        android:text="@string/you_logged_as"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/youLoggedAs" />

    <TextView
        style="@style/myUsualText"
        android:text="@string/your_id_is"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/youIdIs" />

    <TextView
        style="@style/myUsualBoldText"
        android:text="@string/your_repos_list_is"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/youReposList" />

</LinearLayout>